Correct selectors, to ensure messages are found and parsed. Add padding to the left of subscripts and superscripts so they do not overlap the normal-sized characters with which they're associated.

--- a/fb.katex.css
+++ b/fb.katex.css
@@ -21,6 +21,18 @@
   font-family: KaTeX_Main;
 }
 
+#facebook
+  .system-fonts--body
+  div.html-div
+  > span.renderable
+  > span:where(.katex, .katex-display)
+  span.katex-html
+  > span.base
+  > span.mord
+  > span.msupsub {
+  padding-left: 1.5px;
+}
+
 #facebook .system-fonts--body div.html-div > span.renderable {
   display: inline-block;
 }
